--- a/Designer/Interface/Dialogs/SetTrial.xaml
+++ b/Designer/Interface/Dialogs/SetTrial.xaml
@@ -1,8 +1,10 @@
 ﻿<Grid x:Class="NETPath.Interface.Dialogs.SetTrial"
 		xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 		xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-		DataContext="{Binding RelativeSource={RelativeSource Self}}" 
-		MinHeight="75" MinWidth="600" Margin="5">
+		xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+		xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+		Margin="5" mc:Ignorable="d" d:DesignHeight="400" d:DesignWidth="1200" 
+		DataContext="{Binding RelativeSource={RelativeSource Self}}" >
 	<Grid.RowDefinitions>
 		<RowDefinition Height="Auto" />
 		<RowDefinition Height="Auto" />
@@ -13,9 +15,9 @@
 		<RowDefinition Height="*" />
 	</Grid.RowDefinitions>
 	<Label Content="Your Name:" Height="Auto" HorizontalAlignment="Left" Margin="0" VerticalContentAlignment="Center" Width="Auto" Grid.Row="0" FontSize="12pt" />
-	<TextBox x:Name="YourName" Text="{Binding Path=UserName}" IsReadOnly="True" Height="Auto" Margin="100,5,5,5" VerticalContentAlignment="Center" Grid.Row="0" FontSize="12pt" />
+	<TextBox x:Name="YourName" Text="{Binding Path=UserName}" Height="Auto" Margin="100,5,5,5" VerticalContentAlignment="Center" Grid.Row="0" FontSize="12pt" />
 	<Label Content="Your Email:" Height="Auto" HorizontalAlignment="Left" Margin="0" VerticalContentAlignment="Center" Width="Auto" Grid.Row="1" FontSize="12pt" />
-	<TextBox Text="{Binding Path=UserEmail}" IsReadOnly="True" Height="Auto" Margin="100,5,5,5" VerticalContentAlignment="Center" Grid.Row="1" FontSize="12pt" />
+	<TextBox Text="{Binding Path=UserEmail}" Height="Auto" Margin="100,5,5,5" VerticalContentAlignment="Center" Grid.Row="1" FontSize="12pt" />
 	<Label Content="Company:" Height="Auto" HorizontalAlignment="Left" Margin="0" VerticalContentAlignment="Center" Width="Auto" Grid.Row="2" FontSize="12pt" />
 	<TextBox Text="{Binding Path=Company}" Height="27" Margin="100,5,5,5" VerticalContentAlignment="Center" Grid.Row="2" FontSize="12pt" />
 	<Label Content="Country:" Height="Auto" HorizontalAlignment="Left" Margin="0" VerticalContentAlignment="Center" Width="Auto" Grid.Row="3" FontSize="12pt" />
