--- a/Designer/Interface/REST/Service.xaml
+++ b/Designer/Interface/REST/Service.xaml
@@ -654,11 +654,11 @@
 									<ColumnDefinition Width="*" />
 									<ColumnDefinition Width="*" />
 								</Grid.ColumnDefinitions>
-								<ToggleButton IsChecked="{Binding Path=UseCertificatesSecurity}" Content="Certificate" Margin="5" Grid.Row="1" Grid.Column="0" />
-								<ToggleButton IsChecked="{Binding Path=UseIssuedTokenSecurity}" Content="Issued Token" Margin="5" Grid.Row="1" Grid.Column="1" />
-								<ToggleButton IsChecked="{Binding Path=UsePeerSecurity}" Content="Peer" Margin="5" Grid.Row="1" Grid.Column="2" />
-								<ToggleButton IsChecked="{Binding Path=UseUserNamePasswordSecurity}" Content="Username/Password" Margin="5" Grid.Row="1" Grid.Column="3" />
-								<ToggleButton IsChecked="{Binding Path=UseWindowsServiceSecurity}" Content="Windows Service" Margin="5" Grid.Row="1" Grid.Column="4" />
+								<ToggleButton IsChecked="{Binding Path=UseCertificatesSecurity}" Content="Certificate" Margin="5" Grid.Column="0" />
+								<ToggleButton IsChecked="{Binding Path=UseIssuedTokenSecurity}" Content="Issued Token" Margin="5" Grid.Column="1" />
+								<ToggleButton IsChecked="{Binding Path=UsePeerSecurity}" Content="Peer" Margin="5" Grid.Column="2" />
+								<ToggleButton IsChecked="{Binding Path=UseUserNamePasswordSecurity}" Content="Username/Password" Margin="5" Grid.Column="3" />
+								<ToggleButton IsChecked="{Binding Path=UseWindowsServiceSecurity}" Content="Windows Service" Margin="5" Grid.Column="4" />
 							</Grid>
 							<GroupBox Grid.Column="0" Grid.Row="1" Header="Certificate" Margin="5" Visibility="{Binding Path=UseCertificatesSecurity, Converter={StaticResource BoolVisibilityConverter}}">
 								<Grid>
