--- a/Designer/Interface/Main.xaml
+++ b/Designer/Interface/Main.xaml
@@ -7,6 +7,7 @@
 		xmlns:local="clr-namespace:NETPath.Interface"
 		xmlns:apm="clr-namespace:ActiproSoftware.Windows.Media.Animation;assembly=ActiproSoftware.Shared.Wpf"
 		xmlns:sf="http://schemas.syncfusion.com/wpf"
+		xmlns:lic="clr-namespace:Prospective.Server.Licensing;assembly=Licensing"
 		Icon="pack://application:,,,/NETPath;component/Icons/DesignStudio.ico" 
 		mc:Ignorable="d" d:DesignHeight="980" d:DesignWidth="1280"
 		Title="NETPath" MinHeight="980" MinWidth="1280" DataContext="{Binding RelativeSource={RelativeSource Self}}" Style="{StaticResource MainWindowStyle}"
@@ -103,6 +104,48 @@
 					</Setter.Value>
 				</Setter>
 			</Style>
+			<DataTemplate x:Key="{x:Type lic:AvailableUpdateXAML}" DataType="{x:Type lic:AvailableUpdateXAML}">
+				<Grid Name="ItemGrid" >
+					<Grid.ColumnDefinitions>
+						<ColumnDefinition Width="*" />
+						<ColumnDefinition Width="Auto" />
+					</Grid.ColumnDefinitions>
+					<Grid.RowDefinitions>
+						<RowDefinition Height="Auto" />
+					</Grid.RowDefinitions>
+					<Border x:Name="ItemBG" Grid.ColumnSpan="2" Background="Transparent" CornerRadius="5" />
+					<StackPanel Orientation="Vertical" Margin="3">
+						<StackPanel Orientation="Horizontal">
+							<Image x:Name="Icon" Source="pack://application:,,,/NETPath;component/Icons/X16/Update.png" Width="16" Height="16" Stretch="None" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="0,0,4,0" />
+							<TextBlock Text="{Binding Path=Version}" Foreground="{StaticResource DefaultFontColor}" FontFamily="{StaticResource DefaultFontFamily}" FontSize="11pt" />
+						</StackPanel>
+						<TextBlock Foreground="{StaticResource DefaultFontColor}" FontFamily="{StaticResource DefaultFontFamily}" FontSize="10pt" TextWrapping="NoWrap" TextTrimming="CharacterEllipsis" Margin="20,0,0,0" >
+							<TextBlock.Text>
+								<Binding StringFormat="Released On: {0: MMMM dd, yyyy HH:mm}" Path="Date" />
+							</TextBlock.Text>
+						</TextBlock>
+					</StackPanel>
+					<Button Grid.Column="1" x:Name="BeginUpdate" Visibility="Collapsed" Margin="0" Padding="0" Width="30" Style="{StaticResource ListItemButtonRight}" Click="BeginUpdate_Click">
+						<Image Source="pack://application:,,,/NETPath;component/Icons/X16/Download.png" HorizontalAlignment="Center" VerticalAlignment="Center" UseLayoutRounding="True" Height="16" Width="16" Stretch="Uniform"/>
+					</Button>
+				</Grid>
+				<DataTemplate.Triggers>
+					<MultiDataTrigger>
+						<MultiDataTrigger.Conditions>
+							<Condition Binding="{Binding RelativeSource={RelativeSource Mode=FindAncestor,AncestorType={x:Type ListBoxItem}},Path=IsMouseOver}" Value="True" />
+							<Condition Binding="{Binding RelativeSource={RelativeSource Mode=FindAncestor,AncestorType={x:Type ListBoxItem}},Path=IsSelected}" Value="False" />
+						</MultiDataTrigger.Conditions>
+						<Setter TargetName="ItemBG" Property="Background" Value="{StaticResource MouseOverBackgroundColor}" />
+					</MultiDataTrigger>
+					<DataTrigger Binding="{Binding RelativeSource={RelativeSource Mode=FindAncestor,AncestorType={x:Type ListBoxItem}},Path=IsMouseOver}" Value="True" >
+						<Setter TargetName="BeginUpdate" Property="Visibility" Value="Visible" />
+					</DataTrigger>
+					<DataTrigger Binding="{Binding RelativeSource={RelativeSource Mode=FindAncestor,AncestorType={x:Type ListBoxItem}},Path=IsSelected}" Value="True" >
+						<Setter TargetName="ItemBG" Property="Background" Value="{StaticResource DefaultSelectionColor}" />
+						<Setter TargetName="BeginUpdate" Property="Visibility" Value="Visible" />
+					</DataTrigger>
+				</DataTemplate.Triggers>
+			</DataTemplate>
 
 			<Style x:Key="ScrollBarLineButtonRight" TargetType="{x:Type RepeatButton}">
 				<Setter Property="OverridesDefaultStyle" Value="true"/>
@@ -201,6 +244,7 @@
 					<ColumnDefinition Width="36" />
 					<ColumnDefinition Width="Auto" />
 					<ColumnDefinition Width="Auto" />
+					<ColumnDefinition Width="Auto" />
 					<ColumnDefinition Width="*"/>
 					<ColumnDefinition Width="36" />
 					<ColumnDefinition Width="36" />
@@ -227,22 +271,28 @@
 						<Image Source="pack://application:,,,/NETPath;component/Icons/X32/Close.png" Width="32" Height="32" Stretch="None" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="3,1" />
 					</Button>
 				</StackPanel>
-				<apm:ToggleTransitionPresenter Grid.Column="3" DefaultDirection="Down" Margin="50,0" Transition="{StaticResource HeaderTransition}" IsAlternateContentVisible="{Binding Path=IsBuilding}" >
+				<Button x:Name="SystemUpdates" Grid.Column="3" Style="{StaticResource WindowSystemButtonStyle}" Margin="20,0,0,0" pc:WindowChrome.IsHitTestVisibleInChrome="True" Visibility="Collapsed" Click="SystemUpdates_Click" ToolTip="NETPath Updates are available!" >
+					<StackPanel Orientation="Horizontal" Margin="0,0,5,0">
+						<Image Source="pack://application:,,,/NETPath;component/Icons/X32/Update.png" Width="32" Height="32" Stretch="None" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="3,1" />
+						<TextBlock VerticalAlignment="Center" Margin="5,0,0,0">Updates Available</TextBlock>
+					</StackPanel>
+				</Button>
+				<apm:ToggleTransitionPresenter Grid.Column="4" DefaultDirection="Down" Margin="50,0" Transition="{StaticResource HeaderTransition}" IsAlternateContentVisible="{Binding Path=IsBuilding}" >
 					<TextBlock Text="{Binding Path=Title}" FontSize="14pt" HorizontalAlignment="Center" VerticalAlignment="Center" TextTrimming="CharacterEllipsis" />
 					<apm:ToggleTransitionPresenter.AlternateContent>
 						<TextBlock Text="Building..." FontSize="14pt" HorizontalAlignment="Center" VerticalAlignment="Center" TextTrimming="CharacterEllipsis" />
 					</apm:ToggleTransitionPresenter.AlternateContent>
 				</apm:ToggleTransitionPresenter>
-				<Button x:Name="MinimizeWindow" Grid.Column="4" Style="{StaticResource WindowControlButtonStyle}" pc:WindowChrome.IsHitTestVisibleInChrome="True" Click="MinimizeWindow_Click">
+				<Button x:Name="MinimizeWindow" Grid.Column="5" Style="{StaticResource WindowControlButtonStyle}" pc:WindowChrome.IsHitTestVisibleInChrome="True" Click="MinimizeWindow_Click">
 					<Image Source="pack://application:,,,/NETPath;component/Icons/WindowMinimize.png" Width="12" Height="12" Stretch="None" HorizontalAlignment="Center" VerticalAlignment="Center" />
 				</Button>
-				<Button x:Name="MaximizeWindow" Grid.Column="5" Visibility="Collapsed" Style="{StaticResource WindowControlButtonStyle}" pc:WindowChrome.IsHitTestVisibleInChrome="True" Click="MaximizeWindow_Click">
+				<Button x:Name="MaximizeWindow" Grid.Column="6" Visibility="Collapsed" Style="{StaticResource WindowControlButtonStyle}" pc:WindowChrome.IsHitTestVisibleInChrome="True" Click="MaximizeWindow_Click">
 					<Image Source="pack://application:,,,/NETPath;component/Icons/WindowMaximize.png" Width="12" Height="12" Stretch="None" HorizontalAlignment="Center" VerticalAlignment="Center" />
 				</Button>
-				<Button x:Name="RestoreWindow" Grid.Column="5" Style="{StaticResource WindowControlButtonStyle}" pc:WindowChrome.IsHitTestVisibleInChrome="True" Click="RestoreWindow_Click">
+				<Button x:Name="RestoreWindow" Grid.Column="6" Style="{StaticResource WindowControlButtonStyle}" pc:WindowChrome.IsHitTestVisibleInChrome="True" Click="RestoreWindow_Click">
 					<Image Source="pack://application:,,,/NETPath;component/Icons/WindowRestore.png" Width="12" Height="12" Stretch="None" HorizontalAlignment="Center" VerticalAlignment="Center" />
 				</Button>
-				<Button x:Name="CloseWindow" Grid.Column="6" Style="{StaticResource WindowControlButtonStyle}" pc:WindowChrome.IsHitTestVisibleInChrome="True" Click="CloseWindow_Click">
+				<Button x:Name="CloseWindow" Grid.Column="7" Style="{StaticResource WindowControlButtonStyle}" pc:WindowChrome.IsHitTestVisibleInChrome="True" Click="CloseWindow_Click">
 					<Image Source="pack://application:,,,/NETPath;component/Icons/WindowClose.png" Width="12" Height="12" Stretch="None" HorizontalAlignment="Center" VerticalAlignment="Center" />
 				</Button>
 				<Border x:Name="ScreenButtonsPanel" Height="34" Visibility="Collapsed" Grid.Row="1" Grid.ColumnSpan="7" BorderBrush="{StaticResource WindowBorderColor}" BorderThickness="0,1,0,0">
@@ -281,13 +331,6 @@
 							<ColumnDefinition Width="*" />
 							<ColumnDefinition Width="2*" />
 						</Grid.ColumnDefinitions>
-						<Border Name="UpdateAvailable" Height="50" Grid.ColumnSpan="2" Grid.Row="0" Visibility="Collapsed" Background="{StaticResource DefaultBackgroundColor}" BorderBrush="Transparent">
-							<Grid>
-								<Label Content="There is a new version of NETPath available. Would you like to download it now?" FontSize="16" FontWeight="SemiBold" Height="Auto" HorizontalAlignment="Left" Margin="10,8,0,0" VerticalAlignment="Top" />
-								<Button Content="Yes" Height="27" HorizontalAlignment="Right" Margin="0,11,87,0" Name="UpdateYes" VerticalAlignment="Top" Width="75" Click="UpdateYes_Click" />
-								<Button Content="No" Height="27" HorizontalAlignment="Right" Margin="0,11,6,0" Name="UpdateNo" VerticalAlignment="Top" Width="75" Click="UpdateNo_Click" />
-							</Grid>
-						</Border>
 						<StackPanel Grid.Column="0" Grid.Row="1" Margin="5">
 							<TextBlock Text="New" Foreground="{StaticResource DefaultFontColor}" FontSize="18pt" Margin="0,0,0,10" />
 							<Button x:Name="CreateSolution" Grid.Row="0" HorizontalContentAlignment="Left" Click="NewSolution_Click" >
@@ -586,6 +629,22 @@
 									</TextBlock>
 								</Grid>
 							</StackPanel>
+						</Grid>
+					</Grid>
+					<Grid x:Name="UpdatesScreen" Visibility="Collapsed">
+						<Grid.ColumnDefinitions>
+							<ColumnDefinition Width="230" />
+							<ColumnDefinition Width="*" />
+						</Grid.ColumnDefinitions>
+						<Grid.RowDefinitions>
+							<RowDefinition Height="*" />
+							<RowDefinition Height="Auto" />
+						</Grid.RowDefinitions>
+						<ListBox x:Name="AvailableUpdatesList" Grid.Column="0" Grid.Row="0" Grid.RowSpan="2" ItemsSource="{Binding Path=AvailableUpdates}" BorderThickness="0" Background="Transparent" Margin="0" SelectionMode="Single" Padding="-1,0" ItemContainerStyle="{StaticResource StretchedContainerStyle}" ScrollViewer.HorizontalScrollBarVisibility="Disabled" ScrollViewer.VerticalScrollBarVisibility="Visible" VirtualizingStackPanel.IsVirtualizing="False" SelectionChanged="AvailableUpdatesList_SelectionChanged" />
+						<sf:RichTextBoxAdv HTMLText="{Binding Path=SelectedUpdate.Notes}" Background="Transparent" IsReadOnly="True" Grid.Row="0" Grid.Column="1" Margin="0,0,5,0" PageLayout="Continuous" ScrollViewer.HorizontalScrollBarVisibility="Disabled" ScrollViewer.VerticalScrollBarVisibility="Visible" />
+						<Grid x:Name="DownloadProgressPanel" Margin="5" Grid.Row="1" Grid.Column="1" Visibility="Collapsed">
+							<ProgressBar x:Name="DownloadProgressBar" HorizontalAlignment="Stretch" VerticalAlignment="Center" Height="26" Maximum="100" Minimum="0" />
+							<TextBlock x:Name="DownloadProgress" VerticalAlignment="Center" HorizontalAlignment="Center" />
 						</Grid>
 					</Grid>
 				</Grid>
