--- a/Designer/Interface/Dialogs/SetLicense.xaml
+++ b/Designer/Interface/Dialogs/SetLicense.xaml
@@ -14,9 +14,9 @@
 	<Label Content="Serial:" Height="Auto" HorizontalAlignment="Left" Margin="0" VerticalContentAlignment="Center" Width="Auto" Grid.Row="0" FontSize="12pt" />
 	<TextBox x:Name="SerialBox" Text="{Binding Path=Serial}" Height="27" Margin="100,5,5,5" VerticalContentAlignment="Center" Grid.Row="0" FontSize="12pt" />
 	<Label Content="Your Name:" Height="Auto" HorizontalAlignment="Left" Margin="0" VerticalContentAlignment="Center" Width="Auto" Grid.Row="1" FontSize="12pt" />
-	<TextBox Text="{Binding Path=UserName}" IsReadOnly="True" Height="Auto" Margin="100,5,5,5" VerticalContentAlignment="Center" Grid.Row="1" FontSize="12pt" />
+	<TextBox Text="{Binding Path=UserName}" Height="Auto" Margin="100,5,5,5" VerticalContentAlignment="Center" Grid.Row="1" FontSize="12pt" />
 	<Label Content="Your Email:" Height="Auto" HorizontalAlignment="Left" Margin="0" VerticalContentAlignment="Center" Width="Auto" Grid.Row="2" FontSize="12pt" />
-	<TextBox Text="{Binding Path=UserEmail}" IsReadOnly="True" Height="Auto" Margin="100,5,5,5" VerticalContentAlignment="Center" Grid.Row="2" FontSize="12pt" />
+	<TextBox Text="{Binding Path=UserEmail}" Height="Auto" Margin="100,5,5,5" VerticalContentAlignment="Center" Grid.Row="2" FontSize="12pt" />
 	<CheckBox Content="Reveice email with updates about this product." IsChecked="{Binding Path=AllowProductEmails}" Height="Auto" Margin="100,5,5,5" HorizontalContentAlignment="Left" Grid.Row="3" FontSize="12pt" />
 	<CheckBox Content="Reveice email about new products and services from Prospective Software." IsChecked="{Binding Path=AllowOtherEmails}" Height="Auto" Margin="100,5,5,5" HorizontalContentAlignment="Left" Grid.Row="4" FontSize="12pt" />
 </Grid>
